# flex

./: .codex  .gitignore  AGENTS.md  Dockerfile  README.md  manual_draft.py  manual_elo.py  manual_player.py  manual_scoreboard.py  pyproject.toml  test.py
champs/: __main__.py  constants.py  db.py  discord_views.py  draft.py  elo.py  elo_table.py  fearless.py  filters.py  forcedodge.py  get.py  help.py  json_payload.py  match.py  player.py  random_champ.py  random_champ_weighted.py  role.py  scoreboard_cv.py  secret.py  utils.py
champs/common/: __init__.py  utils.py
champs/db/: __init__.py  db.py
champs/models/: __init__.py  match_record.py  player.py
champs/myresources/: __init__.py  champ_data_db.yaml  champs_by_class.txt  champs_by_complexion.txt  champs_by_damage_type.txt  champs_by_gender.txt  champs_by_lgbt.txt  champs_by_role.txt  champs_players_manifest.json  champs_with_roles.txt  damage_type_by_champ.txt  player_to_name.json  roles_by_champ.txt
champs/payloads/: __init__.py  fearless.py  match.py  player_mapping.py
champs/random_champs/: __init__.py  filters.py  (+3 more)
codex/: LOG.md  TASKS.md
random_champ_bot/: bot.py
tests/: conftest.py  test_dodges.py  test_draft.py  test_elo_iterative.py  test_elo_query.py  test_elo_table_formatting.py  test_fearless.py  test_fearless_integration.py  test_filters.py  test_help_commands.py  test_json_payload.py  test_manual_elo.py  test_match_commands.py  test_match_schema.py  test_pipeline_integration.py  test_player_name_map.py  test_role_commands.py  test_scoreboard_matching.py  test_scoreboard_parser_resources.py
(+18 files in other folders)
