[project]
name = "champs"
version = "0.1.0"
description = ""
authors = [
    {name = "felixrichards",email = "felixarichards@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "discord-py (>=2.5.2,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "opencv-python-headless>=4.13.0.92",
    "rapidocr-onnxruntime>=1.4.4",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv.workspace]
members = [
    "elo",
]
